# Vanin_Renderer

./: CMakeLists.txt  README.md  main.cpp  model.cpp  model.h
output/: render_gouraud6.tga
